fix(frontend): overflowing tabs in browsers
Fixes a minor issue with scrollbars appearing in tabs in the sample
and target browsers.

--- a/server/frontend/src/style.css
+++ b/server/frontend/src/style.css
@@ -106,6 +106,10 @@
   .browser {
     height: 100%;
     position: relative;
+
+    .p-tabmenu {
+      overflow: hidden;
+    }
   }
 
   .browser .scroller {
